--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "debug": "^4.3.4",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {}
+    "express": "^4.18.2",
+    "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0"
+  }
 }
