--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test.spec.js"
   },
   "repository": {
     "type": "git",
@@ -15,11 +14,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "spec": "^1.0.1",
+    "supertest": "^6.3.3",
+    "jest": "^29.4.1",
+    "dotenv": "^16.0.3"
   }
 }
