--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "chai": "^4.3.7",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.4.1",
+    "mocha": "^10.2.0",
+    "moment": "^2.29.4",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
-    "chai": "^4.3.7",
-    "mocha": "^10.2.0",
     "spec": "^1.0.1",
-    "supertest": "^6.3.3",
-    "jest": "^29.4.1",
-    "dotenv": "^16.0.3"
+    "supertest": "^6.3.3"
   }
 }
