--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^8.12.0",
     "bcrypt": "^5.1.0",
     "chai": "^4.3.7",
     "cors": "^2.8.5",
