--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha test.spec.js"
+    "test": "mocha test.spec.js",
+    "build": "ncc build server.js -o dist"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,8 @@
     "sequelize": "^6.28.0",
     "spec": "^1.0.1",
     "supertest": "^6.3.3"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.36.1"
   }
 }
