--- a/webapp.service
+++ b/webapp.service
@@ -8,7 +8,7 @@ Restart=always
 RestartSec=10
 StandardOutput=syslog
 StandardError=syslog
-SyslogIdentifier=webapp-server-log
+SyslogIdentifier=webapp
 User=ec2-user
 EnvironmentFile=/home/ec2-user/webapp/app.env
 
