--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,12 +33,12 @@ jobs:
         uses: hashicorp/packer-github-actions@master
         with:
           command: init
-          target: ./packer/ami.pkr.hcl
+          target: aws_ami.pkr.hcl
           working_directory: .
 
       - name: Packer build
         uses: hashicorp/packer-github-actions@master
         with:
           command: build
-          target: ./packer/ami.pkr.hcl
+          target: aws_ami.pkr.hcl
           working_directory: .
