--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,10 @@ jobs:
 
     steps:
       - name: Checkout Git Repository
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Zip Git Repository
-      - uses: montudor/action-zip@v1
+        uses: montudor/action-zip@v1
         with:
           args: zip -r webapp.zip .
           source: .
