--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "ajv": "^8.12.0",
+    "aws-sdk": "^2.1323.0",
     "bcrypt": "^5.1.0",
     "chai": "^4.3.7",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "jest": "^29.4.1",
     "mocha": "^10.2.0",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
