--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jest": "^29.4.1",
     "mocha": "^10.2.0",
     "moment": "^2.29.4",
