--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
     "spec": "^1.0.1",
+    "statsd": "^0.9.0",
     "supertest": "^6.3.3",
     "winston": "^3.8.2"
   },
